# cdk-goat

./: .isort.cfg  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  app.py  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: ci.yml
cdk/: __init__.py  pyproject.toml
cdk/cdk_goat_service/: cdk_goat_stack.py
cdk/cdk_goat_service/cdk_constructs/: constants.py  containers.py  db.py  network.py  storage.py
cdk/containers/dvpwa/: .snyk  Dockerfile  README.rst  run.py
cdk/containers/dvpwa/sqli/: app.py  middlewares.py  routes.py  views.py
cdk/containers/dvpwa/sqli/dao/: course.py  mark.py  review.py  student.py  user.py
cdk/containers/dvpwa/sqli/schema/: forms.py
cdk/containers/dvpwa/sqli/services/: db.py
cdk/containers/dvpwa/sqli/utils/: auth.py  jinja2.py
scripts/: aws_connect.sh  diagram.py
tests/: __init__.py
tests/unit/: __init__.py  test_cdk_goat_stack.py
